chore: Blueprint overhaul to v0.1.0