@@ -5,10 +5,12 @@ echo Building FastFileSearch...
 call mvn clean package -f pom.xml
 echo.
 echo Building Benchmark...
-call mvn clean compile -f examples\Benchmark\pom.xml
+cd examples\Benchmark
+call mvn clean package -f pom.xml
 echo.
 echo Running Benchmark...
-java -cp "examples\Benchmark\target\classes;target\fastfilesearch-v1.0.0.jar" fastfilesearch.Benchmark
+java --enable-native-access=ALL-UNNAMED -cp "target\fastfilesearch-benchmark-v1.0.0.jar;..\..\target\fastfilesearch-v1.0.0.jar" fastfilesearch.Benchmark
+cd ..\..
 echo.
 echo === Benchmark Complete ===
 pause
